@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-10-04 12:25
+// This file was generated on 2011-10-07 11:36
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
@@ -27,6 +27,7 @@ return array(
 	'tx_icslibnavitia_node' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Node.php',
 	'tx_icslibnavitia_nodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_NodeList.php',
 	'tx_icslibnavitia_nota' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Nota.php',
+	'tx_icslibnavitia_proximity' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Proximity.php',
 	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
 	'tx_icslibnavitia_route' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Route.php',
 	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
