@@ -1,3 +1,8 @@
+2011-10-07 Pierrick Caillon <pierrick@in-cite.net>
+	* Updated autoload.php
+	* Fixed attribute name in Proximity node.
+	* Changed method name from getLineByStopAreaCode to getLineListByStopAreaCode in APIService to match existing methods naming and return type.
+
 2011-10-06 Pierrick Caillon <pierrick@in-cite.net>
 	* Fixed type definition for odd property in HangList node.
 	* Added Proximity node.
